# mathezirkel-kurs

./: .gitignore
binomialkoeffizienten/: README.md  loesung.tex  loesung.txt  uebung.tex  uebungszettel.cls
binomialkoeffizienten/diagrams-binomialcoefficients/: diagrams-binomialcoefficients.cabal  stack.yaml
binomialkoeffizienten/diagrams-binomialcoefficients/src/: NiceColours.hs
binomialkoeffizienten/diagrams-binomialcoefficients/src/Diagrams/: BinomialCoefficients.hs
fixpunkte-stochastik/: loesung.tex  uebung.tex  uebungszettel.cls
klasse78_schuljahr1314/: uebung6.tex
kosmische-leiter/: leiter.tex
